[package]
name = "lview"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
byte-unit = "4.0.19"
clap = { version = "4.4.8", features = ["derive"] }
lazy_static = "1.4.0"
quick-xml = { version = "0.31.0", features = ["serialize"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tera = "1.19.1"
tokio = { version = "1.34.0", features = ["full"] }
zip = "0.6.6"
