[package]
name = "lview"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.8.1"
byte-unit = "4.0.19"
clap = { version = "4.4.8", features = ["derive"] }
quick-xml = { version = "0.31.0", features = ["serialize"] }
sailfish = "0.8.3"
serde = { version = "1.0.192", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
zip = "0.6.6"
form_urlencoded = "1.2.0"
percent-encoding = "2.3.0"
serde_with = "3.4.0"
