[package]
name = "lview"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.8.1"
byte-unit = "4.0.19"
clap = { version = "4.4.8", features = ["derive"] }
quick-xml = { version = "0.39.2", features = ["serialize"] }
sailfish = "0.10.1"
serde = { version = "1.0.192", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
zip = { version = "8.2.0", features = ["chrono"] }
form_urlencoded = "1.2.0"
percent-encoding = "2.3.0"
serde_with = "3.4.0"
tower-http = { version = "0.6.2", features = ["fs"] }
httpdate = "1.0.3"
chrono = "0.4.41"
xmp_toolkit = { version = "1.12.0", features = ["chrono"] }
pdf = "0.10.0"
